@@ -123,13 +123,19 @@ module Wit
       end
 
       ## POST - adds a new expression to the value of the entity.
-      def add_expression(entity_id, value, new_expression)
-
+      ##
+      ## @param new_expression_with_id_and_value [Wit::REST::BodyJson] includes new expression for said ID and value.
+      def add_expression(new_expression_with_id_and_value)
+        ## Rename it for better reading
+        new_express = new_expression_with_id_and_value
+        ## Get the value that will had the expression inserted
+        value = new_express.values[0]["value"]
+        return @client.post("/entities/#{new_express.id}/values/#{value}/expressions", new_express.one_expression_to_json(value))
       end
 
       ## DELETE - deleetes the expression in the value of the entity.
       def delete_expression(entity_id, value, expression)
-
+        return @client.delete("/entities/#{entity_id}/values/#{value}/expressions/#{expression}")
       end
 
       ## Used to refresh the results from the given results. Only applicable to result objects that directly
